log
Thu 24 Aug 2023 01:41:30 AM UTC: 
 tests:  0|6
total_score: 0/70
d452867
Thu 24 Aug 2023 02:04:32 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
654c814
Thu 24 Aug 2023 02:05:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b31daaa
Thu 24 Aug 2023 02:17:07 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:10: error: unused variable ‘current’ [-Werror=unused-variable]
   39 |   Node * current = list->head;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79093d2
